--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -2,3 +2,12 @@
     height: 300px;
     width: 400px;
 }
+
+a {
+    color: pink;
+    font-size: 20px;
+  }
+
+  a:hover {
+    color: yellow;
+ }
